Add API call to import the user key
