# swagger.yaml
@@ -252,6 +252,33 @@ paths:
           description: successful operation
       security:
         - api_key: []
+  /identity/import/:
+    post:
+      tags:
+        - keys
+      summary: Import the user key
+      description: ''
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      parameters:
+        - name: params
+          in: body
+          description: Import parameters
+          schema:
+            type: object
+            required:
+              - path
+            properties:
+              path:
+                type: string
+                example: /tmp/user-key-export.zip
+      responses:
+        '200':
+          description: successful operation
+      security:
+        - api_key: []
   /version/:
     get:
       tags:
